# link

./: .eslintignore  .eslintrc.json  .gitignore  .pre-commit-config.yaml  Architecture.drawio  Changelog.md  README.md  package-lock.json  package.json  tsconfig.json
back_end/: .eslintignore  .eslintrc.json  .mocharc.json  README.md  package-lock.json  package.json  tsconfig.json
back_end/src/: LinkServer.ts  start.ts
back_end/src/controllers/: index.ts
back_end/src/database/: Database.test.ts  Database.ts  Fixtures.test.ts  Fixtures.ts  Repository.test.ts  (+1 more)
back_end/test/: TestServer.test.ts
back_end/util/: backupMongo.sh  buildForProd.sh  exportCardSettings.sh  nodemon.json  startLocalProxy.sh
front_end/: .eslintrc.json  .prettierignore  README.md  package-lock.json  package.json
front_end/src/: index.ts
front_end/test/: mocha.opts
front_end/tests/: FaceInPlaneContainingPoint.unit.test.ts  RandomPoint.unit.test.ts
frontend/: webpack.config.js
frontend/tests/: ObjectDimensions.unit.test.ts
microservices/: .npmignore  Architecture.drawio  README.md  config.base.yml  config.dev.yml  docker-compose.yml  nest-cli.json  package-lock.json  package.json  tsconfig.json
microservices/card-store/: config.base.yml  config.dev.yml  config.prod.yml  docker-compose.yml  nest-cli.json  package-lock.json  package.json  tsconfig.json
microservices/scripts/: setEnvironmentForDev.sh
scheduler/: .coverage  .flake8  LICENSE.txt  card-scheduler-specs.md  noxfile.py  pyproject.toml
scheduler/docs/: card-scheduler-specs.md
scheduler/src/scheduler/: console.py  wikipedia.py
scheduler/tests/: test_console.py  test_wikipedia.py
schema/: .eslintrc.json  package-lock.json  package.json  tsconfig.json
schema/src/: index.ts
src/: index.html  index.ts
src/typescript/: Application.ts  Camera.ts  Config.ts  Controls.ts  Resources.ts  SettingsGenerator.ts
tests/: BoundingBox.unit.test.ts  FaceContainingPoint.unit.test.ts  FlattenPlane.unit.test.ts  GenerateObjectCluster.unit.test.ts  OnPlane.unit.test.ts  setOnPlane.unit.test.ts
(+234 files in other folders)
