[tool.poetry]
name = "scheduler"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "8.0.1"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
coverage = {extras = ["toml"], version = "5.4"}
pytest-cov = "^2.12.0"
pytest-mock = "^3.6.1"
black = "21.5b1"
flake8 = "^3.9.2"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^21.4.3"
flake8-import-order = "^0.18.1"
safety = "^1.10.3"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
scheduler = "scheduler.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["scheduler"]

[tool.coverage.report]
show_missing = true
fail_under = 100
